...
    <string name="extra_event_label">Extra event</string>
    <string name="extra_event_description_on">This event is marked as extra and will not be paid hourly.</string>
    <string name="extra_event_description_off">This event will be treated as a regular event.</string>
    <string name="extra_event_info">This event is marked as extra and will not be paid hourly.</string>
    <string name="finish">Finish</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="confirmationMessage">Congratulation !\nYour event has been succefully created and added to your calendar</string>
    <string name="cancel">Cancel</string>
    <string name="default_web_client_id">423898020035-fu7m7lmtsuu6cn7d3s4ev4mrf0ep68l3.apps.googleusercontent.com</string>
    <string name="replacement">Replacement</string>
    <string name="organize_replacement">Organize a replacement</string>
    <string name="waiting_confirmation_replacement">Replacement request</string>
    <string name="confirmed_replacements">Upcoming replacements</string>

...
    <string name="hour_recap_tag_absent">Marked absent</string>
    <string name="hour_recap_tag_presence_unknown">Presence not recorded</string>
    <string name="hour_recap_tag_replaced">Replaced</string>
    <string name="hour_recap_tag_replacement_taken">Replacement shift</string>

    <!-- Category -->
    <string name="edit_category_title">Edit your categories</string>
    <string name="edit_category_empty_state_title">No categories yet.</string>
    <string name="edit_category_empty_state_message">Create your first category using the “+” button.</string>
    <string name="edit_category_name_label">Category name</string>
    <string name="edit_category_save_button">Save category</string>
    <string name="delete_category_message">Are you sure you want to delete this category ?</string>
    <string name="default_category_label">Uncategorized</string>
    <string name="category_selector_create_category">Create a category</string>
    <string name="category_selector_edit_my_categories">Edit my categories</string>

    <!-- Organization Overview -->
    <plurals name="members_count">
...
